syntax="proto3";

package teksteamclient.cm.messages.bodies;
option csharp_namespace = "TEKSteamClient.CM.Messages.Bodies";

message LogOnResponse
{
	optional int32 result = 1;
	optional int32 heartbeat_interval = 2;
	optional uint32 cell_id = 7;
}