syntax="proto3";

package teksteamclient.cm.messages;
option csharp_namespace = "TEKSteamClient.CM.Messages";

enum MessageType
{
	INVALID = 0;
	MULTI = 1;
	SERVICE_METHOD_RESPONSE = 147;
	SERVICE_METHOD = 151;
	HEARTBEAT = 703;
	LOG_OFF = 706;
	LOG_ON_RESPONSE = 751;
	DEPOT_DECRYPTION_KEY = 5438;
	DEPOT_DECRYPTION_KEY_RESPONSE = 5439;
	SERVER_UNAVAILABLE = 5500;
	LOG_ON = 5514;
	PRODUCT_INFO = 8903;
	PRODUCT_INFO_RESPONSE = 8904;
}